<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TianbaorebengMIS</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string-array name="choice_arrays">
        <item>Choice</item>
        <item>Heating Mode</item>
        <item>Cooling Mode</item>
        <item>Auto Mode</item>
    </string-array>

    <string name="HeatingMode">Heating Mode</string>
    <string name="CoolingMode">Cooling Mode</string>
    <string name="AutoMode">Auto Mode</string>
    <string name="title_activity_device_state">DeviceStateActivity</string>
    <string name="title_activity_command">CommandActivity</string>

    <!-- DeviceList Page -->
    <string name="DeviceList">DeviceList</string>
    <string name="Operation">Operation</string>
    <string name="View">view</string>

    <!-- Command Page -->
    <string name="Command">Command</string>
    <string name="RunMode">Run Mode</string>
    <string name="Choice">Choice</string>
    <string name="setting">Setting</string>
    <string name="HeatingCelsius">Heating Celsius:</string>
    <string name="CoolingCelsius">Cooling Celsius:</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="defrost">Defrost</string>
    <!-- Data State Page -->
    <string name="Tb_DeviceState">device control</string>
    <string name="DeviceUnitState">Device Unit State</string>
    <string name="ModuleUse">Module Use</string>
    <string name="ModuleNumber">Module Number</string>
    <string name="EnvironmentCelsius">Environment Celsius</string>
    <string name="DeviceRunDateintotally">Total Run Date</string>
    <string name="EvaporationEffluentCelsius">Effluent Celsius</string>
    <string name="EvaporationRewaterCelsius">Rewater Celsius</string>
    <string name="Name">Name</string>
    <string name="Address">Address</string>
    <string name="MState">MState</string>
    <string name="Action">Action</string>
    <string name="use">use</string>
    <string name="ban">ban</string>
    <string name="running">running</string>
    <string name="stopping">stop</string>
    <string name="FastOperation">Fast Operation</string>
    <string name="use1">(use)</string>
    <string name="DeviceState">DeviceState</string>
    <string name="DeviceControl">DeviceControl</string>
    <string name="Device">Device</string>
    <string name="DeviceName">Device Name:</string>
    <string name="ModuleNumber1">Module Number:</string>
    <string name="BeginDate">Begin Date:</string>
    <string name="UserName">User Name:</string>
    <string name="UserIphone">User Iphone:</string>
    <string name="UserMail">User Mail:</string>
    <string name="UserAddress">User Address:</string>
    <string name="Remark">Remark:</string>

    <!-- Error Message and Success Messages -->

    <string name="pleaseselectchoice">Please select choice</string>
    <string name="CoolingCelsiusshouldnotempty">CoolingCelsius should not be empty</string>
    <string name="HeatingCelsiusshouldnotempty">HeatingCelsius should not be empty</string>
    <string name="CommandisUpdated">Command is inserted Successfully</string>
    <string name="Connectionerror">Connection error</string>
    <string name="loginerror">Invalid Credentials</string>
    <!-- Login Page -->
    <string name="title_activity_login">LoginActivity</string>
    <string name="Usignin">Sign in</string>
    <string name="title_activity_device">DeviceActivity</string>
    <string name="title_activity_tablayout">Tablayout</string>

</resources>