<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="500dp"
    android:background="#1a7f92"
    android:scrollbars="vertical" >

    <ImageView
        android:id="@+id/testimage1"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:src="@drawable/ic_top" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/testimage1"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:text="@string/DeviceUnitState"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/deviceUnitState"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/testimage1"
        android:background="@drawable/edittextshape" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="2dp"
        android:text="@string/ModuleUse"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/moduleUse"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="2dp"
        android:background="@drawable/edittextshape" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="2dp"
        android:text="@string/RunMode"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/runMode"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="2dp"
        android:background="@drawable/edittextshape" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="2dp"
        android:text="@string/ModuleNumber"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/moduleNumber"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="2dp"
        android:background="@drawable/edittextshape" />
    
     <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="2dp"
        android:text="@string/EnvironmentCelsius"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/environmentCelsius"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView5"  
        android:layout_marginTop="2dp" 
        android:background="@drawable/edittextshape" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="2dp"
        android:text="@string/HeatingCelsius"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/heatingCelsius"
         android:layout_width="80dp"
        android:layout_height="20dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView6"
        android:layout_marginTop="2dp"
        android:background="@drawable/edittextshape" />
    
    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView7"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="2dp"
        android:text="@string/CoolingCelsius"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/coolingCelsius"
         android:layout_width="80dp"
        android:layout_height="20dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView7"
        android:layout_marginTop="2dp"
        android:background="@drawable/edittextshape" />
    
    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView8"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="2dp"
        android:text="@string/DeviceRunDateintotally"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/totalRunDate"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView8"
        android:layout_marginTop="2dp"
        android:background="@drawable/edittextshape" />
    
    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView9"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="2dp"
        android:text="@string/EvaporationEffluentCelsius"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/effluentCelsius"
         android:layout_width="80dp"
        android:layout_height="20dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView9"
        android:layout_marginTop="2dp"
        android:background="@drawable/edittextshape" />
    
    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView10"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="2dp"
        android:text="@string/EvaporationRewaterCelsius"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/rewaterCelsius"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView10"
        android:layout_marginTop="2dp"
        android:background="@drawable/edittextshape" />
 <TableLayout
        android:id="@+id/table"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/rewaterCelsius"
         android:layout_marginTop="30dp" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            >
 <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView11"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="5dp"
        android:textColor="#fff"
        android:text="@string/Name"
        
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView11"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/textView12"
        android:textColor="#fff"
        android:text="@string/Address"
       
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView11"
        android:layout_marginLeft="11dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/textView13"
        android:text="@string/MState"
        android:textColor="#fff"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView11"
        android:layout_marginLeft="41dp"
        android:layout_marginTop="5dp"
        android:textColor="#fff"
        android:layout_toRightOf="@+id/textView14"
        android:text="@string/Action"
      
        android:textSize="16sp"
       />
    
    </TableRow>
    </TableLayout>
      <ListView
        android:id="@+id/module_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/table"
        android:divider="#b5b5b5"
        android:dividerHeight="1dp" />
    
</RelativeLayout>