<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#1a7f92"
    android:scrollbars="vertical" >

    <ImageView
        android:id="@+id/testimage1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/u148" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/testimage1"
        android:layout_centerHorizontal="true"
        android:text="@string/Device"
        android:textSize="20sp"
        android:textStyle="bold" >
    </TextView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/DeviceName"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/deviceName"
        android:layout_width="150dp"
        android:layout_height="20dp"
        android:layout_below="@+id/textView1"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/textView2"
        android:background="@drawable/edittextshape" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/ModuleNumber1"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/moduleNumberTbDevice"
        android:layout_width="150dp"
        android:layout_height="20dp"
        android:layout_below="@+id/textView2"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/textView3"
        android:background="@drawable/edittextshape" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/BeginDate"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/beginDate"
        android:layout_width="150dp"
        android:layout_height="20dp"
        android:layout_below="@+id/textView3"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/textView4"
        android:background="@drawable/edittextshape" />
    <!--  -->

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/UserName"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/userName"
        android:layout_width="150dp"
        android:layout_height="20dp"
        android:layout_below="@+id/textView4"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/textView5"
        android:background="@drawable/edittextshape" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/UserIphone"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/userIphone"
        android:layout_width="150dp"
        android:layout_height="20dp"
        android:layout_below="@+id/textView5"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/textView6"
        android:background="@drawable/edittextshape" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/UserMail"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/userMail"
        android:layout_width="150dp"
        android:layout_height="20dp"
        android:layout_below="@+id/textView6"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/textView7"
        android:background="@drawable/edittextshape" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView7"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/UserAddress"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/userAddress"
        android:layout_width="150dp"
        android:layout_height="20dp"
        android:layout_below="@+id/textView7"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/textView8"
        android:background="@drawable/edittextshape" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView8"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/Remark"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/remark"
        android:layout_width="150dp"
        android:layout_height="20dp"
        android:layout_below="@+id/textView8"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/textView9"
        android:background="@drawable/edittextshape1" />

   
</RelativeLayout>
