<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="500dp"
    android:background="#1a7f92" >

    <ImageView
        android:id="@+id/commandImage1"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:src="@drawable/ic_top" />

    <TableRow
        android:id="@+id/tableRow111"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/commandImage1"
        android:layout_marginTop="35dp" >

        <TextView
            android:id="@+id/TextView015"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/RunMode"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:layout_marginLeft="54dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/edittextshape"
            android:entries="@array/choice_arrays" />

        <Button
            android:id="@+id/runModeSettings"
            android:layout_width="80dp"
            android:layout_height="37dp"
            android:layout_marginLeft="40dp"
            android:background="@drawable/buttonshape1"
            android:onClick="getRunModeButton"
            android:text="@string/setting" />
    </TableRow>

    <!-- Row2 Column2 -->

    <TableRow
        android:id="@+id/tableRow20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tableRow111"
        android:layout_marginTop="5dp" >

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/HeatingCelsius"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editText20"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:layout_marginLeft="50dp"
            android:background="@drawable/edittextshape"
            android:ems="10"
            android:hint=""
            android:inputType="number" >
        </EditText>

        <Button
            android:id="@+id/hCelsius"
            android:layout_width="80dp"
            android:layout_height="37dp"
            android:layout_marginLeft="39dp"
            android:background="@drawable/buttonshape1"
            android:onClick="getHeatingCelsius"
            android:text="@string/setting" />
    </TableRow>

    <!-- Row3 Column3 -->

    <TableRow
        android:id="@+id/tableRow21"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tableRow20"
        android:layout_marginTop="5dp" >

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/CoolingCelsius"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editText21"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:layout_marginLeft="50dp"
            android:background="@drawable/edittextshape"
            android:ems="10"
            android:hint=""
            android:inputType="number" >
        </EditText>

        <Button
            android:id="@+id/cCelsius"
            android:layout_width="80dp"
            android:layout_height="37dp"
            android:layout_marginLeft="39dp"
            android:background="@drawable/buttonshape1"
            android:onClick="getCoolingCelsius"
            android:text="@string/setting" />
    </TableRow>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:text="@string/FastOperation"
        android:textColor="#ffffff"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:drawableTop="@drawable/ic_start"
            android:gravity="center"
            android:onClick="postDeviceState"
            android:text="@string/start"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:drawableTop="@drawable/ic_stop"
            android:gravity="center"
            android:onClick="postDeviceStop"
            android:text="@string/stop"
            android:textColor="#ffffff" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="25dp" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:drawableTop="@drawable/ic_reset"
            android:gravity="center"
            android:onClick="postDeviceReset"
            android:text="@string/reset"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:drawableTop="@drawable/ic_defrost"
            android:gravity="center"
            android:onClick="postDeviceReset"
            android:text="@string/defrost"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#ffffff" />
    </LinearLayout>

</RelativeLayout>