<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#1a7f92"
    android:scrollbars="vertical" >

    <ImageView
        android:id="@+id/mainImageId"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:src="@drawable/ic_top" />

    <TextView
        android:id="@+id/text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mainImageId"
        android:text="@string/DeviceList"
        android:textColor="#ffffff"
        android:layout_marginLeft="100dp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <!-- Row 1 with single column -->

    <TableLayout
        android:id="@+id/TableLayoutmain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_name" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/did"
                android:layout_weight="1"
                android:background="@drawable/cell_shape"
                android:gravity="center"
                android:padding="4dip"
                android:text="@string/DeviceName"
                android:textColor="#000000"
                android:textSize="17dip"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/uname"
                android:layout_weight="1"
                android:background="@drawable/cell_shape"
                android:gravity="center"
                android:padding="4dip"
                android:text="@string/UserName"
                android:textColor="#000000"
                android:textSize="17dip"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/operation"
                android:layout_weight="1"
                android:background="@drawable/cell_shape"
                android:gravity="center"
                android:padding="4dip"
                android:text="@string/Operation"
                android:textColor="#000000"
                android:textSize="17dip"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

    <ListView
        android:id="@+id/list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TableLayoutmain">
    </ListView>

</RelativeLayout>